http-sneak-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-sneak-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "example.com"
      http:
        paths:
          - path: /http-sneak
            backend:
              serviceName: http-sneak-svc
              servicePort: 8080
